--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,12 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.194.0/containers/go
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.217.4/containers/docker-from-docker-compose
 {
 	"name": "Go",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
-			// Update the VARIANT arg to pick a version of Go: 1, 1.16, 1.17
-			"VARIANT": "1.17",
+			// Update the VARIANT arg to pick a version of Go: 1, 1.17, 1.18
+			"VARIANT": "1.18",
 			// Options
 			"NODE_VERSION": "none"
 		}
@@ -20,6 +20,7 @@
 		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,destination=/home/vscode/.ssh,type=bind,readonly",
 		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,destination=/root/.ssh,type=bind,readonly"
 	],
+
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
 		"editor.formatOnSave": true,
@@ -28,20 +29,24 @@
 		"go.gopath": "/go",
 		"go.goroot": "/usr/local/go"
 	},
+
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"streetsidesoftware.code-spell-checker",
+    	"streetsidesoftware.code-spell-checker",
 		"github.copilot",
 		"eamodio.gitlens",
 		"golang.Go",
 		"davidanson.vscode-markdownlint",
 		"redhat.vscode-xml",
 		"redhat.vscode-yaml"
-	],
+  ],
+
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
+
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "go version",
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+	"postCreateCommand": "./.devcontainer/postCreate.sh",
+
+	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
 }
