--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: Build go2junit
 
+env:
+  go-version: "1.20"
+
 on:
   push:
     branches:
@@ -17,7 +20,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v3
         with:
-          go-version: "1.17.x"
+          go-version: ${{ env.go-version }}
 
       - name: Cache go dependencies
         uses: actions/cache@v3
@@ -42,7 +45,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v3
         with:
-          go-version: "1.17.x"
+          go-version: ${{ env.go-version }}
 
       - name: Cache go dependencies
         uses: actions/cache@v3
