--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Release
 
+env:
+  go-version: "1.20"
+
 on:
   release:
     types:
@@ -18,7 +21,7 @@ jobs:
       - name: Set up Go 1.17
         uses: actions/setup-go@v3
         with:
-          go-version: "1.17.x"
+          go-version: ${{ env.go-version }}
 
       - name: Checkout Code
         uses: actions/checkout@v3
