--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,5 @@
 name: Release
 
-env:
-  go-version: "1.20"
-
 on:
   release:
     types:
@@ -15,21 +12,15 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
       - name: Setup go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.go-version }}
-
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
+          check-latest: true
+          go-version-file: "go.mod"
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          version: v2.0.0
+          version: '~> v2.0'
           args: release --clean
